# computacao-grafica

./: CMakeLists.txt  Makefile  README.md  RESULT.md
docs/mod-2/: video.mov
src/: Hello3D.cpp
